<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".old.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/key_1"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/key_star"
        android:layout_width="0dp"
        android:layout_height="@dimen/key_height"
        android:onClick="onKeyClick"
        android:text="@string/k_star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/key_0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

    <Button
        android:id="@+id/key_0"
        android:layout_width="0dp"
        android:layout_height="@dimen/key_height"
        android:onClick="onKeyClick"
        android:text="@string/k_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/key_well"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/key_star">

    </Button>

    <Button
        android:id="@+id/key_well"
        android:layout_width="0dp"
        android:layout_height="@dimen/key_height"
        android:onClick="onKeyClick"
        android:text="@string/k_well"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/key_0">

    </Button>

    <Button
        android:id="@+id/key_7"
        android:layout_width="0dp"
        android:layout_height="@dimen/key_height"
        android:onClick="onKeyClick"
        android:text="@string/k_7"
        app:layout_constraintBottom_toTopOf="@+id/key_star"
        app:layout_constraintEnd_toStartOf="@+id/key_0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/key_8"
        android:layout_width="0dp"
        android:layout_height="@dimen/key_height"
        android:onClick="onKeyClick"
        android:text="@string/k_8"
        app:layout_constraintBottom_toTopOf="@+id/key_star"
        app:layout_constraintEnd_toStartOf="@+id/key_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/key_7" />

    <Button
        android:id="@+id/key_9"
        android:layout_width="0dp"
        android:layout_height="@dimen/key_height"
        android:onClick="onKeyClick"
        android:text="@string/k_9"
        app:layout_constraintBottom_toTopOf="@+id/key_well"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/key_0">

    </Button>

    <Button
        android:id="@+id/key_4"
        android:layout_width="0dp"
        android:layout_height="@dimen/key_height"
        android:onClick="onKeyClick"
        android:text="@string/k_4"
        app:layout_constraintBottom_toTopOf="@+id/key_7"
        app:layout_constraintEnd_toStartOf="@+id/key_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

    <Button
        android:id="@+id/key_5"
        android:layout_width="0dp"
        android:layout_height="@dimen/key_height"
        android:onClick="onKeyClick"
        android:text="@string/k_5"
        app:layout_constraintBottom_toTopOf="@+id/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/key_4">

    </Button>

    <Button
        android:id="@+id/key_6"
        android:layout_width="0dp"
        android:layout_height="@dimen/key_height"
        android:onClick="onKeyClick"
        android:text="@string/k_6"
        app:layout_constraintBottom_toTopOf="@+id/key_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/key_5">

    </Button>


    <Button
        android:id="@+id/key_1"
        android:layout_width="0dp"
        android:layout_height="@dimen/key_height"
        android:onClick="onKeyClick"
        android:text="@string/k_1"
        app:layout_constraintBottom_toTopOf="@+id/key_4"
        app:layout_constraintEnd_toStartOf="@+id/key_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

    <Button
        android:id="@+id/key_2"
        android:layout_width="0dp"
        android:layout_height="@dimen/key_height"
        android:onClick="onKeyClick"
        android:text="@string/k_2"
        app:layout_constraintBottom_toTopOf="@+id/key_4"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/key_1">

    </Button>

    <Button
        android:id="@+id/key_3"
        android:layout_width="0dp"
        android:layout_height="@dimen/key_height"
        android:onClick="onKeyClick"
        android:text="@string/k_3"
        app:layout_constraintBottom_toTopOf="@+id/key_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/key_2">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>